src/snapshots/afrotd__parser__tests__interpreation_html_6.3.13_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.3.13.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und 15 von der A-5. Punter A88 befindet sich in A’s Endzone, als
            er den Ball kickt. Tackle A77 hält einen Gegner in A’s Endzone und
            es liegt dafür eine Flagge auf dem Boden. Team B advanct den Ball
            bis zu der B-45.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B hat die Wahl den Ball an der A-45 nach der
                Strafdurchführung von der B-45 zu übernehmen oder die Punkte
                für den Safety zu akzeptieren, da die Annahme der Strafe in der
                Endzone in einen Safety resultiert (Regel 10.2.4).
            </p>
        </details>
    </div>
</article>
