src/snapshots/afrotd__parser__tests__interpreation_html_6.3.14_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.3.14.I
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und 3 von der B-25. Team A hat sich zu einem Fieldgoalversuch
            aufgestellt. B50 befindet sich innerhalb eines Meters an seiner
            Scrimmage Line und in der Lücke zwischen Snapper und Guard. B50’s
            Schulter überlappt die Schulter des Snappers. Der Fieldgoalversuch
            ist gut.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Live Ball Foul von B50. Team A kann die drei Punkte behalten
                und die Strafe ablehnen oder die Strafe annehmen und damit die
                Punkte ablehnen und es ist A’s Ball, 1. und 10 von der B-20.
            </p>
        </details>
    </div>
</article>
