src/snapshots/afrotd__parser__tests__interpreation_html_6.3.14_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.3.14.III
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und 7 von der B-20. Team A hat sich zu einem Fieldgoalversuch
            aufgestellt. Defense Linemen B55, B57 und B78 stehen Schulter an
            Schulter nebeneinander. B57 steht Guard A66 direkt gegenüber,
            während sich B55 und B78 rechts bzw. links an den Lücken neben
            A66’s Schultern befinden. Nach dem Snap bewegen sich alle drei
            vorwärts. (a) Alle drei berühren hauptsächlich A66; (b) B55 und B57
            berühren A66, während B78 den rechten Offense Tackle A65 blockt;
            (c) B57 und B78 blocken gemeinsam gegen A66, während B55 sich
            streckt, um den Kick zu blocken.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Foul. 5-Meterstrafe. Wenn Team A die Strafe annimmt, ist es
                ein 4. und 2 an der B-15. (b) und (c) Kein Foul. Die Aktionen
                der drei Defense Spieler richten sich nicht hauptsächlich gegen
                einen einzelnen Spieler und daher ist das Verhalten legal.
            </p>
        </details>
    </div>
</article>
