src/snapshots/afrotd__parser__tests__interpreation_html_6.3.1_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.3.1.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A’s Punt, von hinter seiner eigenen Goalline aus, überquert
            die neutrale Zone ins Spielfeld, berührt einen Team B-Spieler und
            prallt zurück hinter Team A’s Goalline, wo A32 den Ball recovert.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Safety (Regeln 6.3.3, 9.1.3 und 8.5.1.a).
            </p>
        </details>
    </div>
</article>
