src/snapshots/afrotd__parser__tests__interpreation_html_6.4.1_11.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.4.1.XI
        </p>
    </div>
    <div class="message-body">
        <p>
            Punt Receiver B22 steht an der B-30 und wartet auf den Punt. Dabei
            befindet sich sein Mitspieler B88 drei Meter vor ihm. A44, der sich
            downfield befindet, um den Kick zu überwachen, blockt B88 legal
            gegen B22, als dieser nach dem Kick greift. Der Ball trifft B22 an
            dessen Schultern und prallt davon. Team A recovert den Ball an der
            B-25.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A’s Ball, 1. und 10 von der B-25. Das ist keine
                Behinderung beim Fangen eines Kicks. A44’s Aktion richtet sich
                gegen B88, der nicht in Position zum Fangen eines Kicks ist,
                und nicht gegen B22. Dadurch hat A44 die Fangmöglichkeit von
                B22 nicht behindert. Durch die Berührung von B22 kann Team A
                legal den Kick recovern.
            </p>
        </details>
    </div>
</article>
